Chronopic-firmwarecord adapted to work only with Automatic Firmware

--- a/chronopic-firmware/chronopic-firmwarecord/Makefile.am
+++ b/chronopic-firmware/chronopic-firmwarecord/Makefile.am
@@ -8,6 +8,7 @@ firmwaredatadir = @datadir@/@PACKAGE@/firmware
 dist_firmwaredata_DATA = 	ledp.hex			\
 				chronopic_firmware_10ms.hex 	\
 				chronopic_firmware_50ms.hex	\
-				chronopic_firmware_100ms.hex
+				chronopic_firmware_100ms.hex	\
+				chronopic-firmware-automatic.hex
 
 CLEANFILES = $(bin_SCRIPTS)
