Added log facilities from Banshee project

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -154,6 +154,8 @@ SOURCES = \
 	report.cs\
 	sport.cs\
 	log.cs\
+	logB.cs\
+	logConsoleCrayon.cs\
 	serverPing.cs\
 	serverEvaluator.cs\
 	server.cs\
