testing capture and pass stuff to R

--- a/encoder/Makefile.am
+++ b/encoder/Makefile.am
@@ -2,6 +2,7 @@ encoderdatadir = @datadir@/@PACKAGE@/encoder
 
 dist_encoderdata_DATA = pyserial_pyper.py \
 	     call_graph.R \
+	     capture.R \
 	     graph.R \
 	     inertia-momentum.R \
 	     neuromuscularProfile.R \
