Capture.R called with a small call_capture.R to be faster

--- a/encoder/Makefile.am
+++ b/encoder/Makefile.am
@@ -1,6 +1,7 @@
 encoderdatadir = @datadir@/@PACKAGE@/encoder
 
 dist_encoderdata_DATA = pyserial_pyper.py \
+	     call_capture.R \
 	     call_graph.R \
 	     capture.R \
 	     graph.R \
