--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -213,6 +213,10 @@ RESOURCES = \
 	../images/mini/jump_dj.png,mini/jump_dj.png \
 	../images/jump_dj_a.png,jump_dj_a.png\
 	../images/mini/jump_dj_a.png,mini/jump_dj_a.png \
+	../images/jump_dj_inside.png,jump_dj_inside.png\
+	../images/mini/jump_dj_inside.png,mini/jump_dj_inside.png \
+	../images/jump_dj_a_inside.png,jump_dj_a_inside.png\
+	../images/mini/jump_dj_a_inside.png,mini/jump_dj_a_inside.png \
 	../images/jump_rocket.png,jump_rocket.png \
 	../images/mini/jump_rocket.png,mini/jump_rocket.png \
 	../images/jump_rj.png,jump_rj.png \
