--- a/win32/chronojump_innosetup.iss.in
+++ b/win32/chronojump_innosetup.iss.in
@@ -17,7 +17,7 @@ DefaultGroupName=Chronojump
 LicenseFile=.\gpl-2.0.txt
 OutputDir=.
 OutputBaseFilename=Chronojump-@VERSION@
-SetupIconFile=.\chronojump_icon.ico
+SetupIconFile=.\chronojump_icon_install.ico
 Compression=lzma
 SolidCompression=yes
 
