--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,6 +28,7 @@ src/gui/convertWeight.cs
 src/gui/encoder.cs
 src/gui/encoderConfiguration.cs
 src/gui/encoderTreeviews.cs
+src/gui/encoderSelectRepetitions.cs
 src/gui/error.cs
 src/gui/evaluator.cs
 src/gui/event.cs
