--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -245,6 +245,8 @@ RESOURCES = \
 	../images/mini/pulse_custom.png,mini/pulse_custom.png \
 	../images/reaction_time.png,reaction_time.png \
 	../images/mini/reaction_time.png,mini/reaction_time.png \
+	../images/reaction_time_discriminative.png,reaction_time_discriminative.png \
+	../images/mini/reaction_time_discriminative.png,mini/reaction_time_discriminative.png \
 	../images/dj-from-out.png,dj-from-out.png \
 	../images/dj-from-in.png,dj-from-in.png \
 	../images/mtgug.png,mtgug.png \
