Added inertial image and improved start page

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -181,6 +181,7 @@ RESOURCES = \
 	../images/chronojump-jumps-small.png,chronojump-jumps-small.png \
 	../images/chronojump-runs-small.png,chronojump-runs-small.png \
 	../images/chronojump-encoder-small.jpg,chronojump-encoder-small.jpg \
+	../images/chronojump-inertial.png,chronojump-inertial.png \
 	../images/agility_505.png,agility_505.png\
 	../images/mini/agility_505.png,mini/agility_505.png \
 	../images/agility_20yard.png,agility_20yard.png\
